--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -10,7 +10,7 @@
 
 
 \title{Phenological differences among species explain why early leafout extends the calendar but not thermal growing season}
-%dl2024Sept20: I like the idea here, but struggle with the wording---"extends the calendar"--- what about potential growing season or suitable
+%dl2024Sept20: I like the idea here, but struggle with the wording---"extends the calendar"--- it might be too vague for a reader unfamiliar with the concept
 
 \author{Dan, Cat, Deidre and Lizzie}
 \begin{document}
@@ -25,14 +25,20 @@ Carbon uptake by terrestrial plants is a major determinant of Earth's climate sy
 %emw2024Sep19 -- We should cite Zani et al. (Increased growing-season productivity drives earlier autumn leaf senescence in temperate trees) here. Also, has Richardson or anyone shown SOS and EOS correlations? Some citations to check out for SOS and EOS correlations ...
 % https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.12890?casa_token=eliYnpkve8QAAAAA%3A3TqxdGVY6Sv863uZonpVeX0GE2U3UVN7IBMo-vse5knPZ3GQctM3VgZZRC57IuwCvYqB4O8dcOf2-F7Q
 % https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.13311?casa_token=NnEYx9yLGCEAAAAA%3ANitA233aNa7-xE7BvzyBNEZyL8Uqb6fpN5RFDIT8DERycVM5dv2OPm_o5NNQzwsJx6pSSTzlNsABpZTo
+
+%dl2024Setp20: I agree with the above, I think there needs to be more background on the mechanism/cues of carbon assimilation
+
 One possible reason that earlier spring phenology many not increase net carbon assimilation (choose a term and stick with it) is if an early start of growing season results in an earlier end of the growing season. These phenological carryover effects (positive associates between phenological phases) are prevalent \citep{} but weaken over the season \citep{}, so it is unlikely variation in SoS and EoS are perfectly correlated. This is reinforced by the observations that calendar growing seasons have indeed gotten longer with climate change \citep{}. 
 
 %emw2024Sep19 -- Now you have set up the problem so I would then move more QUICKLY to the end of the intro (using some of your text below from the paragraph that starts 'These dynamics suggest that the carbon gain from an extended growing season') and making sure you set up the primary questions for the reader: Does season length connect to SOS (do EOS and SOS correlate)? Why don't we know? Well, we often use satellite data where all species blur together, but the fundamental process should start at the individual level and scale up from through to species and then forests ...  While the constraint should happen at the individual level, we rarely if ever have good EOS, that is -- observations that are of when plants stop growing versus when coloration changes (a known crappy measure, cite). At the next level, as EOS is locally adapted -- plants at different latitudes use unique photoperiods, combined with temperature, to time EOS, this means data across space contains a mix of factors [not sure about this sentence, but wanted to sneak in something like this].  You could re-write what you have below as ...
 
 %emw2024Sep19 -- I think you're sort of giving away the punchline here. I think this makes your findings a bit duller to me ... I would move Fig 1 as the conceptual ending figure, and the next two paragraphs can move down also. This has the added benefit of making the intro shorter and shorter intros are good IMHO. 
+
+%dl2024Sept20: agreed, the below paragraphs feel more like results. The two species examples also made me question the title, "...among species" as it makes it seem like we are testing for tends more within species.
 But conditions that are suitable for photosynthesis are not uniform across the year (Figure 1a). While earlier leafout may increase the length of the calendar growing season, such shifts may have little effect on the thermal growing season, defined here as....\citep{} because the early spring isn't favorable. The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
 %emw2024Sep19 -- also, I am not sure about the term 'phenological carryover' effect (what is a carry-over versus a correlation?) -- you might have to sell it to me over a zoom call or such....
-
+%dl2024Sept20 I also made this note, I was not sure what "carryover referred to
+%dl2024Sept20: I don't think you need to say "four individual plants" it made me initially think we only had data from four plants for those species.
 We can see these dynamics play out by tracking the phenology of four individuals plants and an example. The earlier individual of \emph{Aronia melanocarpa} depicted in Figure \ref{fig:concept}a, starts growing 24 days before a later individual, but only ceases 13 days before it (i.e., it has a 14 day longer calendar growing season). However, because the 24 day growth advantage it has occurs when thermal conditions are less favorable, it ends up having a shorter thermal growing season (i.e., less change for carbon assimilation) than its later conspecific (Figure \ref{fig:concept}b). This is not the case for the later leafing species \emph{Myrica gale} where the both the earlier and later leafing individual start growing under more optimal thermal conditions, so the 20 day ``head start" the earlier individual incurs results in a both a longer calendar and thermal growing season (Figure \ref{fig:concept}a,c). 
 
 These dynamics suggest that the carbon gain from an extended growing season, depends not only on the magnitude of phenological shifts but also the timing of those shifts relative to thermal conditions of the vegetative period, which not only vary across time and space, but also across the species that comprise forest communities. Understanding all this (say better) requires  understanding how the relationship between SoS and both thermal and calendar growing season varies depending on the unique phenological positions the species that make up a community. However, this is super difficult to do because...a few reason including...  
