--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -5,18 +5,18 @@
 \usepackage[margin=.75 in]{geometry}
 
 \usepackage{parskip}
-\parindent=0
+% \parindent=0
 \usepackage{natbib}
 
 
 \title{Phenological differences among species explain why early leafout extends the calendar but not thermal growing season}
-%dl2024Sept20: I like the idea here, but struggle with the wording---"extends the calendar"--- it might be too vague for a reader unfamiliar with the concept
+%dl2024Sept20: I like the idea here, but struggle with the wording---"extends the calendar"--- it might be confusing to a reader unfamiliar with the concept
 
 \author{Dan, Cat, Deidre and Lizzie}
 \begin{document}
-\maketitle}
+\maketitle
 %\setlength{\parskip}{0.5pt} % 1ex plus 0.5ex minus 0.2ex}
-\setlength{\parindent}{0}
+\setlength{\parindent}{0pt}
 
 \section{Introduction}
 Carbon uptake by terrestrial plants is a major determinant of Earth's climate system \citep{} (say more precisely). In mid and high latitudes, the net carbon uptake is primarily determined by the length of the growing season \citep{}. Because climate change has advanced spring leafout, widely considered the start of the growing season \citep{} it has been suggested that earlier start of season should translate into a longer growing season and, therefore, more net carbon uptake by terrestrial ecosystems \citep{}. However we haven't really seen this in the data \citep{}. % Quantifying carbon uptake by terrestrial plants is a critical aspect of climate forecasting, and therefore it is critical to understand the relationship between phenology, growing seasons and carbon storage.
@@ -26,7 +26,7 @@ Carbon uptake by terrestrial plants is a major determinant of Earth's climate sy
 % https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.12890?casa_token=eliYnpkve8QAAAAA%3A3TqxdGVY6Sv863uZonpVeX0GE2U3UVN7IBMo-vse5knPZ3GQctM3VgZZRC57IuwCvYqB4O8dcOf2-F7Q
 % https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.13311?casa_token=NnEYx9yLGCEAAAAA%3ANitA233aNa7-xE7BvzyBNEZyL8Uqb6fpN5RFDIT8DERycVM5dv2OPm_o5NNQzwsJx6pSSTzlNsABpZTo
 
-%dl2024Setp20: I agree with the above, I think there needs to be more background on the mechanism/cues of carbon assimilation
+%dl2024Setp20: I agree with the above, I think there could also be more background on the mechanism/cues of carbon assimilation to set up why calendar vs thermal growing season could differ
 
 One possible reason that earlier spring phenology many not increase net carbon assimilation (choose a term and stick with it) is if an early start of growing season results in an earlier end of the growing season. These phenological carryover effects (positive associates between phenological phases) are prevalent \citep{} but weaken over the season \citep{}, so it is unlikely variation in SoS and EoS are perfectly correlated. This is reinforced by the observations that calendar growing seasons have indeed gotten longer with climate change \citep{}. 
 
@@ -47,6 +47,7 @@ In this study, we use phenological observations from a multi-species common gard
 assess how variation in leafout and  budset phenology among species, years and populations affects the length of the calendar and thermal growing season. Specifically we ask:
 
 \begin{enumerate} %emw2024Sep19 -- these seem like good questions to me, we could tighten up how clearly we answer them ... but it would help to know first if we will combine results and discussion?
+%dl2024Sept20 A minor point, but maybe reorder these, two and three seem like our main questions. 
 \item How strong is the carry-over effect between leafout and budset? 
 \item Which phase more strongly influence variation in growing season length across years, species and populations?
 \item How does variation in the leafout affect the length of the thermal and calendar growing season?
@@ -56,13 +57,14 @@ This study offers insights into physiology that will allow us to scale from ecos
 
 \section{Methods}
 \subsubsection{The common garden at Weld Hill}
-In 2014-2015, we collected seeds of 18 species woody plants from four field sites in eastern Northern America spanning a Y degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White mountains (44.11$^{\circ}$N, 52.14$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 50.66$^{\circ}$W), and St. Hippolyte, CN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seed back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (lat long) where we germinated seeds following standard germination protocols, and grew them to seedling stages for a year or so in the research green house. In Spring of 2017 we planted them out to establish the common garden at Weld hill. Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out planted in the early spring of 2018 (i think). Plots were divided between tree plots which included species x,y,z and shrub plots which included species a,b,c,d and shade cloth. Plots were regularly weeded and watered throughout the duration of the study.
+In 2014-2015, we collected seeds of 18 species woody plants from four field sites in eastern Northern America spanning a Y degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White mountains (44.11$^{\circ}$N, 52.14$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 50.66$^{\circ}$W), and St. Hippolyte, CN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seed back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (lat long) where we germinated seeds following standard germination protocols, and grew them to seedling stages for a year or so in the research green house. In Spring of 2017 we planted them out to establish the common garden at Weld hill. Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out planted in the early spring of 2018 (i think). Plots were divided between tree plots which included species x,y,z and shrub plots which included species a,b,c,d and shade cloth (Table \ref{listSp}). Plots were regularly weeded and watered throughout the duration of the study.
+%dl2024Sept20 Added lat longs and started a table for the spp, seems better than listing in text IMO
 
 \subsubsection{Phenological monitoring:}
 For the years of 2018-2019, we made phenological observations of all individuals in the common garden twice per week from February to December. In 2020 due to the COVID 19 pandemic we did it a bit less, but Cat can say how much. We describe phenological stages using a modified bbch scale \citep{} a common metrics for quantify woody plant phenological progression. We observed all major vegetative stages (budburst, bbch 07, leafout bbch 15, end of leaf expansion bbch 19, budset bbch X, and leaf coloration/drop bbch z, and reproductive phases flowering (60-65) and fruiting and fruit drop(). 
 
 \subsubsection{Data analysis}
-To better under the role that variation in leafout and budset phenology play in determine calendar growing season length among species populations and years we fit a Bayesian hierarchical with a Gaussian probability distribution. We calculated growing season duration by subtracting the day of leafout from the day of budset. We fit an intercept only model with phenophase timing (leafout, budset or growing season duration) as the response variable and partial pooling across species, populations and years. We only included observations with both budset and leafout observed on the same plant in this analysis (n= 595).
+To better understand the role that variation in leafout and budset phenology play in determining calendar growing season length among species populations and years we fit a Bayesian hierarchical with a Gaussian probability distribution. We calculated growing season duration by subtracting the day of leafout from the day of budset. We fit an intercept only model with phenophase timing (leafout, budset or growing season duration) as the response variable and partial pooling across species, populations and years. We only included observations with both budset and leafout observed on the same plant in this analysis ($n$= 595).
 
 To assess the relationship between variation in leafout timing and calendar and thermal growing seasons we fit two additional regression models with thermal or calendar growing season length as the response variable and day of leafout as the main prediction. To account for species-level differences we included partially pooling on the slope and intercept of species.
 
@@ -71,7 +73,8 @@ We define the thermal growing season as the cumulative growing degree day heat s
 All models were fit in the R package brms on 4 chains with a 4000 iteration warm-up and 1000 sampling iterations on each chain for a total of 4,000 sampling iterations across all chains. We evaluated model fit, with no divergent transitions, rhats less than 1.01 and high effective sample sizes. All analysis were done in R.
 
 \section{Results} %emw2024Sep19 -- I liked your questions, I might group answering them in the results (and since people are confused about variance -- keep all that in ONE paragraph and simplify and clarify the answers to your questions ... this would be way easier with a combined results and discussion). 
-\subsubsection{Sources of variation in calander growing season}
+%dl2024Sept20 I agree, if our question is which phase has the stronger influence then discussing them together might help make this comparison
+\subsubsection{Sources of variation in calendar growing season}
 There was high variance in leafout timing among species and years ($\sigma_{species}$: 8.23 $UI_{95}$[5.22,12.81], $\sigma_{year}$:10.49 $UI_{95}$[4.27,24.60], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:0.62, $UI_{95}$[0.02,2.82], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana} the last species to leaf out (Figure \ref{fig:vapar}c). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}c). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). 
 
 Relative to leafout, variance in budset timing was higher for species, years and populations ($\sigma_{species}$: 9.81 $UI_{95}$[ 6.61,14.49], $\sigma_{year}$: 14.92 $UI_{95}$[5.68,9.21], $\sigma_{population}$: 2.35, $UI_{95}$[0.23,8.51], Figure \ref{fig:vapar}), but followed similar relative contributions (highest variance in year, lowest in population).
@@ -84,7 +87,7 @@ The lower levels of variance among year in growing season length we observed rel
 \subsubsection{Relationship between leafout phenology and calender and thermal growing seasons}
 
 We found that later leafout resulted in a shorter calendar growing season (Figure \ref{fig:thermcal}a) and that this relationship was consistent across species, though varying strength  (Figure \ref{fig:thermcal}b).
-
+%dl2024Sept20 I could see some readers struggling here: there is a stronger effect in earlier spp for individuals that leafout later---stronger meaning what exactly? That the latest individuals of early species have the longest thermal growing seasons? I think it is explained well in the figure caption, but maybe needs more elaboration in the text.
 In contrast, we found that a generally later leafout resulted in a longer thermal growing season (Figure \ref{fig:thermcal}c) in our study. This effect was stronger for species that typically leaf out earlier in the spring relative to others like \emph{Sambucus racemosa}, \emph{Viburnum cassiodes}, \emph{Spirea alba}, \emph{Diervella lonicera}, \emph{Aronia melanocarpa} \emph{Spirea tomentosa} and \emph{Betula populifolia} and was weaker in later species like \emph{Betula papyrifera}, \emph{Betula allegheniensis} and \emph{Alnus incana}(Figure \ref{fig:thermcal}d).
 
 
@@ -96,33 +99,38 @@ The dynamics may help to explain why phenology advances with climate change have
 
 %emw2024Sep19 -- This seems a necessary paragraph but I would shorten the part about assembly to 1-2 sentences and make the paragraph more about BIOTIC consequences in general (these are generally ignored by many earth system models) by adding a sentence about the possibility of increase disease or pest damage with longer seasons.
 %emw2024Sep19 -- another hypothesis from my colleagues in Europe is that this is a NEW problem and maybe before early species were more like late species and early WAS still good. I think that might be worth mentioning. 
+%dl2024Sept20 We could sneak something about other traits here and set things up for a follow up paper on the traits we collected---maybe something to discuss further
 So then why are species early? How is it then that phenologically trackers are doing better? \citep{}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability which in forest systems is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in thermally bad conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{}.
 
 %emw2024Sep19 -- yes, it's definitely still true that spring phenology in trees shifts much more than autumn ... you can probably check is the recent ipcc AR5 says it or the Menzel paper from a couple years ago. 
 The phenological carry-over effects between leafout and budset that we observed was interesting in light of the fact that spring phenological phases are reported to be more plastic than autumn ones (is this still true?). Some of this might have to do with scale of measurement---macro-scale measurements like remote sensing may detect different things. Budset is the end of primary growth which we observed closely   
-
+%dl2024Sept20 I felt this was not setup in the intro---did we expect to find population diff and if so why? 
 The low levels of phenological variance between populations in our common garden provide little evidence for local adaptation in phenology. We found slightly stronger evidence for budset than leafout, which is consistent with the literature \citep{}. 
 
  This study shows linking phenological growing season to primary productivity requires account for phenological variation at multiple scales (individual, species level, multiple phases). Some forward thinking implications paragraph here.
 
+%dl2024Sept20 One thought I had that I think would fit in the discussion: how does this relate to the distribution of a phenological event? What are the implications of species for which most individual are uniformly shifting vs a distribution of individuals with a left skew?
 
 \section{Figures} %emw2024Sep19 -- I really like the figures! But I think if you put the first one last you can introduce as a fundamentally new and important view of early seasons as calendar days versus thermal days that wraps up the whole paper. I might then make the last figure first -- big take-home shocking message given first in figures and text! Then break down the variance and data in the other figure. 
-\begin{figure}[h!]
+%dl2024Sept20 can we add a legend defining the light and dark colors? I think the dark and light colors are switched in c.
+%dl2024Sept20 I really like a, and what we are trying to show in b and c, but could see how the scale of the x-axis lessens the point we are trying to make.  Could we add some sort of transparent polygon in the background to show the thermal growing season and illustrate that the growth is outside of this window in b but not in c?
+ \begin{figure}[h!]
     \centering
  \includegraphics[width=.5\textwidth]{..//analyses/figures/aronia_examp.jpeg}
     \caption{Thermal conditions vary across the calendar growing season, which can generate a complex relationship between the calendar and thermal growing seasons. Panel a) depicts the daily heat sums at the Weld Hill Research Building in 2019 and the calendar growth season of early and late leafing individuals of \emph{Aronia melanocarpa} (green bars) and \emph{Myrica gale}(blue bars). Despite the fact the the early individual of \emph{A. melanocarpa} leafs out 24 days before it's later con-generic and only sets bud 13 days before it (i.e., it has a 14 day longer calendar growing season) it's thermal growing season is shorter (panel b) because most of its growth advantage (explain this better) takes place in the unfavorable early spring. In contrast for \emph{M. gale} where both the early and late individual leaf out later in the spring, the 20 day head start and 5 day earlier finish of the earlier individual (15 day longer calendar growing season) results in a longer thermal growing season for it as well (panel c)}.
     \label{fig:concept}
 \end{figure}
 
-
+%dl2024Sept20 would we want to add color to these plots to add more context: eg. a. color by tree/shrubs b. color gradient for latitudes or order them from high to low latitude, c. to me it would be more intuitive to have 2018 at the top
+%dl2024Sept20 may want to also add bars for 90\% UI
 \begin{figure}[h!]
     \centering
  \includegraphics[width=.7\textwidth]{..//analyses/figures/var_parts.jpeg}
-    \caption{Differenece in leafout, budset and calander growing season length partioned between species (a) populations (b) and years (c). Point represent the median effect size estimate, and bars the 50\% uncertainty intervials. The grey distribrion depict the full uncertaintly estiamte around the estimate.}
+    \caption{Difference in leafout, budset and calendar growing season length partitioned between species (a) populations (b) and years (c). Point represent the median effect size estimate, and bars the 50\% uncertainty intervals. The grey distribution depict the full uncertainty estimate around the estimate.}
     \label{fig:vapar}
 \end{figure}
 
-
+%dl2024Sept20 such a cool result! 
 \begin{figure}[h!]
     \centering
  \includegraphics[width=.7\textwidth]{..//analyses/figures/primarygrowingseason_modplots.jpeg}
@@ -130,6 +138,6 @@ The low levels of phenological variance between populations in our common garden
     \label{fig:thermcal}
 \end{figure}
 
-\begin{table}[ht]\centering\caption{Species list} \label{listSp}\begin{tabular}{lr}  \hlineSpecies & functional group \\   \hline  \emph{Acer pensylvanicum} & tree    \\   \emph{Acer spicatum} & tree   \\    \emph{Alnus incana} & shrub  \\    \emph{Amelanchier canadensis} &   \\   \emph{Aronia melanocarpa} &  \\   \emph{Betula alleghaniensis} &  \\   \emph{Betula papyrifera} &   \\   \emph{Betula populifolia} &   \\   \emph{Diervilla lonicera} &   \\   \emph{Myrica gale} &  \\   \emph{Sambucus racemosa} &  \\   \emph{Sorbus americana} &  \\
-  \emph{Spiraea alba} &   \\   \emph{Spiraea tomentosa} &   \\   \emph{Viburnum cassinoides} &   \\   \end{tabular}\end{table}
+\begin{table}[ht]\centering\caption{Species list} \label{listSp}\begin{tabular}{lr}  \hlineSpecies & functional group \\   \hline  \emph{Acer pensylvanicum} & tree    \\   \emph{Acer spicatum} & tree   \\    \emph{Alnus incana} & shrub  \\    \emph{Amelanchier canadensis} &  shrub  \\   \emph{Aronia melanocarpa} & shrub \\   \emph{Betula alleghaniensis} &  tree\\   \emph{Betula papyrifera} &   tree\\   \emph{Betula populifolia} &  tree \\   \emph{Diervilla lonicera} &  shrub \\   \emph{Myrica gale} &  shrub\\   \emph{Sambucus racemosa} &  shrub\\   \emph{Sorbus americana} &  shrub\\
+  \emph{Spiraea alba} &  shrub \\   \emph{Spiraea tomentosa} &   shrub\\   \emph{Viburnum cassinoides} &  shrub \\   \end{tabular}\end{table}
 \end{document}
