--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -21,43 +21,22 @@
 %cjc2024Sept25: I think Lizzie and Deirdre already hit the highlights for the Intro for now. I agree that there are paragraphs that need to be moved to the Results and Discussion (anything that includes the figures). I also think you need to set up the experiement a bit better in why it's so cool. A little more development on the latitudinal gradient would be good, even if the results aren't exciting, it'd be great to set up our initial hypothesis more. And maybe get into trees vs shrubs and interannual variation. This was a massive endeavor, I want the reader to be excited about it. 
 
 \section{Introduction}
-Carbon uptake by terrestrial plants is a major determinant of Earth's climate system \citep{} (say more precisely). In mid and high latitudes, the net carbon uptake is primarily determined by the length of the growing season \citep{}. Because climate change has advanced spring leafout, widely considered the start of the growing season \citep{} it has been suggested that earlier start of season should translate into a longer growing season and, therefore, more net carbon uptake by terrestrial ecosystems \citep{}. However we haven't really seen this in the data \citep{}. % Quantifying carbon uptake by terrestrial plants is a critical aspect of climate forecasting, and therefore it is critical to understand the relationship between phenology, growing seasons and carbon storage.
+Carbon uptake by terrestrial plants is a major determinant of Earth's climate system \citep{} (say more precisely). In mid and high latitudes, net carbon uptake is primarily determined by the length of the growing season \citep{}. Most models of carbon storage assume that earlier spring leafout with climate change will drive longer seasons and increased carbon storage, in part offsetting future warming (CITES). Recent findings, however, have called this critical assumption into question. 
 
-%emw2024Sep19 -- I would make this paragraph a bit more about the current literature which I *think* has a lot about productivity driving EOS dynamics ... Something like: Increasing research has suggested that plants adjust their end of season timing dynamically such that longer seasons do not increase total productivity, but the mechanism or consistency of this effect is unclear (Cite Zani and Norby response to Zani, cite Zohner 2023 solstice). New proposals include that plants somehow adjust mid-season based on a combination of growing season heat and daylength (cite Zohner 2023 solstice) while other work suggests a potential fundamental connection between SOS and EOS [don't use EOS and SOS, please, I am just doing it to be quick] (someone said this I am sure? Found some cites below). These phenological carryover effects (positive associates between phenological phases) are prevalent \citep{} but weaken over the season \citep{}, so it is unlikely variation in SoS and EoS are perfectly correlated. This is reinforced by the observations that calendar growing seasons have indeed gotten longer with climate change \citep{}. 
+%emwNov4 -- I would love to get Cat's help on citations in this paragraph (and throughout). I have offered some, but her ideas would be better.
+Recent research has suggested that plants adjust their end of season timing dynamically such that longer seasons do not increase total productivity, but the mechanism---and prevalence---of this effect is unclear (Cite Zani and Norby response to Zani, cite Zohner 2023 solstice). Observations have found that calendar growing seasons have lengthened with climate change \citep{}, but other studies have found that earlier leafout is often correlated with earlier end-of-season events (Add the CITES I found below?). Recent work has suggested early, increased productivity in the growing seasons drives early senescence (Zani2020), and proposed include that plants adjust mid-season based on a combination of growing season heat and daylength (cite Zohner 2023 solstice). Such studies, however, are based generally on large-scale satellite measurements and small-scale single species pot experiments, and contrast with findings from long-term large-scale $CO_2$ enrichment studies (cite Norby2021). 
 %emw2024Sep19 -- We should cite Zani et al. (Increased growing-season productivity drives earlier autumn leaf senescence in temperate trees) here. Also, has Richardson or anyone shown SOS and EOS correlations? Some citations to check out for SOS and EOS correlations ...
 % https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.12890?casa_token=eliYnpkve8QAAAAA%3A3TqxdGVY6Sv863uZonpVeX0GE2U3UVN7IBMo-vse5knPZ3GQctM3VgZZRC57IuwCvYqB4O8dcOf2-F7Q
 % https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.13311?casa_token=NnEYx9yLGCEAAAAA%3ANitA233aNa7-xE7BvzyBNEZyL8Uqb6fpN5RFDIT8DERycVM5dv2OPm_o5NNQzwsJx6pSSTzlNsABpZTo
+% Norby2021: 10.1126/science.abg1438
 
-%dl2024Setp20: I agree with the above, I think there could also be more background on the mechanism/cues of carbon assimilation to set up why calendar vs thermal growing season could differ
+%emwNov4 -- This opening used to be more about carbon but I think, given our data, we may want to veer away from C and NPP a bit and just come back to it later.
+These contrasting results suggest fundamental gaps in our understanding of how early-season events (and thermal conditions of the vegetative period?) shape growing season length. How early-season events, such as leafout, affect end-of-season events is poorly understood. While results from satellites (e.g., using NDVI) show a correlation,  what exactly is being measured for `end of season' is not clearly tied to a plant-scale event. Yet any connections would likely start at the individual plant level, where we rarely if ever have good measures of start and end of season events together. Further, because end-of-season events, are often more locally adapted---with plants using unique photoperiods to cue important events such as budset (CITES)---than start-of-season events, these trends may importantly vary across populations. Such population-level studies, however, are based on a very limited number of species (CITE zeng and me I guess). Species generally vary strongly in their start-of-season phenology, with this being a major factor that can influence forecasts (NachoOSPREE) and land surface models (CITES). Results to date reporting correlation between start- and end-of-season events generally cannot differentiate between different species, populations or individuals, making our inference limited. 
+% Theory suggesting this is driven by different plant strategies in response to abiotic and biotic environmental pressures (CITES), and also predicts that they should vary strongly in end-of-season events ...
 
-One possible reason that earlier spring phenology many not increase net carbon assimilation (choose a term and stick with it) is if an early start of growing season results in an earlier end of the growing season. These phenological carryover effects (positive associates between phenological phases) are prevalent \citep{} but weaken over the season \citep{}, so it is unlikely variation in SoS and EoS are perfectly correlated. This is reinforced by the observations that calendar growing seasons have indeed gotten longer with climate change \citep{}. 
+In this study, we test how variation in start-of-season---leafout--and end-of-season---budset---phenology among species, populations, and individuals affect the length of the growing season. We address this using rarely available plant-scale data---phenological observations from a multi-species common garden study that can test how correlated leafout and budset are in different species across populations and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and its thermal conditions, which connect to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. %emw2024Sep19 -- woo, woo
 
-%emw2024Sep19 -- Now you have set up the problem so I would then move more QUICKLY to the end of the intro (using some of your text below from the paragraph that starts 'These dynamics suggest that the carbon gain from an extended growing season') and making sure you set up the primary questions for the reader: Does season length connect to SOS (do EOS and SOS correlate)? Why don't we know? Well, we often use satellite data where all species blur together, but the fundamental process should start at the individual level and scale up from through to species and then forests ...  While the constraint should happen at the individual level, we rarely if ever have good EOS, that is -- observations that are of when plants stop growing versus when coloration changes (a known crappy measure, cite). At the next level, as EOS is locally adapted -- plants at different latitudes use unique photoperiods, combined with temperature, to time EOS, this means data across space contains a mix of factors [not sure about this sentence, but wanted to sneak in something like this].  You could re-write what you have below as ...
-
-%emw2024Sep19 -- I think you're sort of giving away the punchline here. I think this makes your findings a bit duller to me ... I would move Fig 1 as the conceptual ending figure, and the next two paragraphs can move down also. This has the added benefit of making the intro shorter and shorter intros are good IMHO. 
-
-%dl2024Sept20: agreed, the below paragraphs feel more like results. The two species examples also made me question the title, "...among species" as it makes it seem like we are testing for tends more within species.
-But conditions that are suitable for photosynthesis are not uniform across the year (Figure 1a). While earlier leafout may increase the length of the calendar growing season, such shifts may have little effect on the thermal growing season, defined here as....\citep{} because the early spring isn't favorable. The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
-%emw2024Sep19 -- also, I am not sure about the term 'phenological carryover' effect (what is a carry-over versus a correlation?) -- you might have to sell it to me over a zoom call or such....
-%dl2024Sept20 I also made this note, I was not sure what "carryover referred to
-%dl2024Sept20: I don't think you need to say "four individual plants" it made me initially think we only had data from four plants for those species.
-We can see these dynamics play out by tracking the phenology of four individuals plants and an example. The earlier individual of \emph{Aronia melanocarpa} depicted in Figure \ref{fig:concept}a, starts growing 24 days before a later individual, but only ceases 13 days before it (i.e., it has a 14 day longer calendar growing season). However, because the 24 day growth advantage it has occurs when thermal conditions are less favorable, it ends up having a shorter thermal growing season (i.e., less change for carbon assimilation) than its later conspecific (Figure \ref{fig:concept}b). This is not the case for the later leafing species \emph{Myrica gale} where the both the earlier and later leafing individual start growing under more optimal thermal conditions, so the 20 day ``head start" the earlier individual incurs results in a both a longer calendar and thermal growing season (Figure \ref{fig:concept}a,c). 
-
-These dynamics suggest that the carbon gain from an extended growing season, depends not only on the magnitude of phenological shifts but also the timing of those shifts relative to thermal conditions of the vegetative period, which not only vary across time and space, but also across the species that comprise forest communities. Understanding all this (say better) requires  understanding how the relationship between SoS and both thermal and calendar growing season varies depending on the unique phenological positions the species that make up a community. However, this is super difficult to do because...a few reason including...  
-
-In this study, we use phenological observations from a multi-species common garden study to 
-assess how variation in leafout and  budset phenology among species, years and populations affects the length of the calendar and thermal growing season. Specifically we ask:
-
-\begin{enumerate} %emw2024Sep19 -- these seem like good questions to me, we could tighten up how clearly we answer them ... but it would help to know first if we will combine results and discussion?
-%dl2024Sept20 A minor point, but maybe reorder these, two and three seem like our main questions. 
-\item How strong is the carry-over effect between leafout and budset? 
-\item Which phase more strongly influence variation in growing season length across years, species and populations?
-\item How does variation in the leafout affect the length of the thermal and calendar growing season?
-\end{enumerate}
-
-This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. %emw2024Sep19 -- woo, woo. 
-
-\section{Methods}
+\section{Methods} %emwNov4 -- Skipping!
 \subsubsection{The common garden at Weld Hill}
 In 2014-2015, we collected seeds of 18 species woody plants from four field sites in eastern Northern America spanning a Y degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White mountains (44.11$^{\circ}$N, 52.14$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 50.66$^{\circ}$W), and St. Hippolyte, CN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seed back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (lat long) where we germinated seeds following standard germination protocols, and grew them to seedling stages for a year or so in the research green house. In Spring of 2017 we planted them out to establish the common garden at Weld hill. Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out planted in the early spring of 2018 (i think - yeah that's right!). Plots were divided between tree plots which included species x,y,z and shrub plots which included species a,b,c,d and shade cloth (Table \ref{listSp}). Plots were regularly weeded and watered throughout the duration of the study.
 %dl2024Sept20 Added lat longs and started a table for the spp, seems better than listing in text IMO
@@ -75,6 +54,8 @@ To assess the relationship between variation in leafout timing and calendar and 
 We define the thermal growing season as the cumulative growing degree day heat sums between the day of leafout and the day of budset for each species. We calculated daily heat sums using the R package pollen \citep{} using a 10 $\degree$C base temperature with minimum and maximum daily temperature data from the weld hill weather station.
 
 All models were fit in the R package brms on 4 chains with a 4000 iteration warm-up and 1000 sampling iterations on each chain for a total of 4,000 sampling iterations across all chains. We evaluated model fit, with no divergent transitions, rhats less than 1.01 and high effective sample sizes. All analysis were done in R.
+
+%emwNov4 -- START BELOW! Need to merge results and discussion .... 
 
 \section{Results} %emw2024Sep19 -- I liked your questions, I might group answering them in the results (and since people are confused about variance -- keep all that in ONE paragraph and simplify and clarify the answers to your questions ... this would be way easier with a combined results and discussion). 
 %dl2024Sept20 I agree, if our question is which phase has the stronger influence then discussing them together might help make this comparison
@@ -97,6 +78,15 @@ In contrast, we found that a generally later leafout resulted in a longer therma
 
 
 \section{Discussion}
+%emwNov4 -- moved this down from previous spot in intro, but have not adjusted text yet!
+But conditions that are suitable for photosynthesis are not uniform across the year (Figure 1a). While earlier leafout may increase the length of the calendar growing season, such shifts may have little effect on the thermal growing season, defined here as....\citep{} because the early spring isn't favorable. The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
+%emw2024Sep19 -- also, I am not sure about the term 'phenological carryover' effect (what is a carry-over versus a correlation?) -- you might have to sell it to me over a zoom call or such....
+%dl2024Sept20 I also made this note, I was not sure what "carryover referred to
+%dl2024Sept20: I don't think you need to say "four individual plants" it made me initially think we only had data from four plants for those species.
+We can see these dynamics play out by tracking the phenology of four individuals plants and an example. The earlier individual of \emph{Aronia melanocarpa} depicted in Figure \ref{fig:concept}a, starts growing 24 days before a later individual, but only ceases 13 days before it (i.e., it has a 14 day longer calendar growing season). However, because the 24 day growth advantage it has occurs when thermal conditions are less favorable, it ends up having a shorter thermal growing season (i.e., less change for carbon assimilation) than its later conspecific (Figure \ref{fig:concept}b). This is not the case for the later leafing species \emph{Myrica gale} where the both the earlier and later leafing individual start growing under more optimal thermal conditions, so the 20 day ``head start" the earlier individual incurs results in a both a longer calendar and thermal growing season (Figure \ref{fig:concept}a,c). 
+%emwNov4 -- end of: moved this down from previous spot in intro, but have not adjusted text yet!
+
+
 %emw2024Sep19 -- I find these results so cool that I think you should open broader and bigger and then get into the species differences .. so open with something like 'We found a fundamental and unexpected trade-off between early, longer growing seasons and the thermal growing season." Or something like that ... then talk about how unexpected this is and what it means, then get into the species-level differences in the next paragraph. 
 Our multi-species common garden study showed that for already early leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season. In fact, we found that for these early leafing taxa, delayed leafout resulted in a longer thermal growing season. This relationship was in part explained by phenological carry-over between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable.  For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, even an earlier relative leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately large gain in thermal sums.
 
@@ -118,14 +108,7 @@ The low levels of phenological variance between populations in our common garden
 %dl2024Sept20 One thought I had that I think would fit in the discussion: how does this relate to the distribution of a phenological event? What are the implications of species for which most individual are uniformly shifting vs a distribution of individuals with a left skew?
 
 \section{Figures} %emw2024Sep19 -- I really like the figures! But I think if you put the first one last you can introduce as a fundamentally new and important view of early seasons as calendar days versus thermal days that wraps up the whole paper. I might then make the last figure first -- big take-home shocking message given first in figures and text! Then break down the variance and data in the other figure. 
-%dl2024Sept20 can we add a legend defining the light and dark colors? I think the dark and light colors are switched in c.
-%dl2024Sept20 I really like a, and what we are trying to show in b and c, but could see how the scale of the x-axis lessens the point we are trying to make.  Could we add some sort of transparent polygon in the background to show the thermal growing season and illustrate that the growth is outside of this window in b but not in c?
- \begin{figure}[h!]
-    \centering
- \includegraphics[width=.5\textwidth]{..//analyses/figures/aronia_examp.jpeg}
-    \caption{Thermal conditions vary across the calendar growing season, which can generate a complex relationship between the calendar and thermal growing seasons. Panel a) depicts the daily heat sums at the Weld Hill Research Building in 2019 and the calendar growth season of early and late leafing individuals of \emph{Aronia melanocarpa} (green bars) and \emph{Myrica gale}(blue bars). Despite the fact the the early individual of \emph{A. melanocarpa} leafs out 24 days before it's later con-generic and only sets bud 13 days before it (i.e., it has a 14 day longer calendar growing season) it's thermal growing season is shorter (panel b) because most of its growth advantage (explain this better) takes place in the unfavorable early spring. In contrast for \emph{M. gale} where both the early and late individual leaf out later in the spring, the 20 day head start and 5 day earlier finish of the earlier individual (15 day longer calendar growing season) results in a longer thermal growing season for it as well (panel c)}.
-    \label{fig:concept}
-\end{figure}
+%emwNov4 -- I moved first figure to third. 
 
 %dl2024Sept20 would we want to add color to these plots to add more context: eg. a. color by tree/shrubs b. color gradient for latitudes or order them from high to low latitude, c. to me it would be more intuitive to have 2018 at the top
 %dl2024Sept20 may want to also add bars for 90\% UI
@@ -144,6 +127,15 @@ The low levels of phenological variance between populations in our common garden
  \includegraphics[width=.7\textwidth]{..//analyses/figures/primarygrowingseason_modplots.jpeg}
     \caption{The relationship between Start of Spring (SoS; calendar day of leafout) and growing season length differs between the calendar growing season and the thermal growing season. An increasing later SoS resulted in a shorter calendar growing season (panel a) and this pattern was consistent across species in our study (panel b). In contrast, an increasing later SoS resulted in a longer thermal growing season (panel c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) are display in the typical order of leafout among species. The blue trend lines represent the mean effect of SoS timing on growing season length and black lines represent 1000 draws from the posterior distribution as a measure of uncertainty. Points in a), and c) represent the raw data. \textbf{to do: rename x-axis on b and d and write our the species names}}
     \label{fig:thermcal}
+\end{figure}
+
+%dl2024Sept20 can we add a legend defining the light and dark colors? I think the dark and light colors are switched in c.
+%dl2024Sept20 I really like a, and what we are trying to show in b and c, but could see how the scale of the x-axis lessens the point we are trying to make.  Could we add some sort of transparent polygon in the background to show the thermal growing season and illustrate that the growth is outside of this window in b but not in c?
+ \begin{figure}[h!]
+    \centering
+ \includegraphics[width=.5\textwidth]{..//analyses/figures/aronia_examp.jpeg}
+    \caption{Thermal conditions vary across the calendar growing season, which can generate a complex relationship between the calendar and thermal growing seasons. Panel a) depicts the daily heat sums at the Weld Hill Research Building in 2019 and the calendar growth season of early and late leafing individuals of \emph{Aronia melanocarpa} (green bars) and \emph{Myrica gale}(blue bars). Despite the fact the the early individual of \emph{A. melanocarpa} leafs out 24 days before it's later con-generic and only sets bud 13 days before it (i.e., it has a 14 day longer calendar growing season) it's thermal growing season is shorter (panel b) because most of its growth advantage (explain this better) takes place in the unfavorable early spring. In contrast for \emph{M. gale} where both the early and late individual leaf out later in the spring, the 20 day head start and 5 day earlier finish of the earlier individual (15 day longer calendar growing season) results in a longer thermal growing season for it as well (panel c)}.
+    \label{fig:concept}
 \end{figure}
 
 
